@@ -4,9 +4,27 @@ description := "A Scala ORM and DSL for talking with Databases using minimum ver
 
 organization := "org.squeryl"
 
-version := "0.9.17"
+version := "0.9.19"
 
-javacOptions := Seq("-source", "1.6", "-target", "1.6")
+javacOptions := {
+  if (scala.util.Properties.isJavaAtLeast("17")) {
+    Seq("-source", "1.8", "-target", "1.8")
+  } else {
+    Seq("-source", "1.6", "-target", "1.6")
+  }
+}
+
+Test / fork := true
+
+// https://github.com/squeryl/squeryl/issues/340
+// TODO remove this workaround
+Test / javaOptions ++= {
+  if (scala.util.Properties.isJavaAtLeast("11")) {
+    Seq("--add-opens=java.base/java.lang=ALL-UNNAMED")
+  } else {
+    Nil
+  }
+}
 
 //only release *if* -Drelease=true is passed to JVM
 version := {
@@ -33,7 +51,7 @@ val Scala211 = "2.11.12"
 
 scalaVersion := Scala211
 
-crossScalaVersions := Seq("2.12.13", Scala211, "2.10.7", "2.13.5")
+crossScalaVersions := Seq("2.12.17", Scala211, "2.10.7", "2.13.10")
 
 Compile / doc / scalacOptions ++= {
   val base = (LocalRootProject / baseDirectory).value.getAbsolutePath
@@ -109,25 +127,7 @@ pomExtra := (<scm>
                </developer>
              </developers>)
 
-credentials ~= { c =>
-  (Option(System.getenv().get("SONATYPE_USERNAME")), Option(System.getenv().get("SONATYPE_PASSWORD"))) match {
-    case (Some(username), Some(password)) =>
-      c :+ Credentials(
-        "Sonatype Nexus Repository Manager",
-        "oss.sonatype.org",
-        username,
-        password)
-    case _ => c
-  }
-}
-
-publishTo := {
-  val nexus = "https://oss.sonatype.org/"
-  if (version.value.trim.endsWith("SNAPSHOT"))
-    Some("snapshots" at nexus + "content/repositories/snapshots")
-  else
-    Some("releases" at nexus + "service/local/staging/deploy/maven2")
-}
+publishTo := sonatypePublishToBundle.value
 
 Test / publishArtifact := false
 
@@ -136,22 +136,24 @@ pomIncludeRepository := { _ => false }
 libraryDependencies ++= Seq(
   "cglib" % "cglib-nodep" % "3.3.0",
   "com.h2database" % "h2" % "1.4.200" % "provided",
-  "mysql" % "mysql-connector-java" % "8.0.24" % "provided",
-  "org.postgresql" % "postgresql" % "42.2.20" % "provided",
+  "mysql" % "mysql-connector-java" % "8.0.32" % "provided",
+  "org.postgresql" % "postgresql" % "42.5.4" % "provided",
   "net.sourceforge.jtds" % "jtds" % "1.3.1" % "provided",
   "org.apache.derby" % "derby" % "10.11.1.1" % "provided",
-  "org.xerial" % "sqlite-jdbc" % "3.34.0" % "test",
-  "org.json4s" %% "json4s-scalap" % "3.6.11",
+  "org.xerial" % "sqlite-jdbc" % "3.39.3.0" % "test",
+  "org.json4s" %% "json4s-scalap" % "3.6.12",
 )
 
 libraryDependencies ++= {
-  Seq("org.scalatest" %% "scalatest" % "3.2.8" % "test")
+  Seq("org.scalatest" %% "scalatest" % "3.2.15" % "test")
 }
 
 libraryDependencies ++= {
   CrossVersion.partialVersion(scalaVersion.value) match {
-    case Some((2, scalaMajor)) if scalaMajor >= 11 =>
+    case Some((2, 11)) =>
       Seq("org.scala-lang.modules" %% "scala-xml" % "1.3.0")
+    case Some((2, scalaMajor)) if scalaMajor >= 12 =>
+      Seq("org.scala-lang.modules" %% "scala-xml" % "2.1.0")
     case _ =>
       Nil
   }
